trying to fix project paragraph overflow

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -237,7 +237,7 @@ body {
 
 @media only screen and (max-width: 480px) {
   .project-box {
-    flex-direction: column; 
+    flex-direction: column;
   }
 }
 
@@ -269,6 +269,7 @@ body {
 @media only screen and (max-width: 480px) {
   .project-paragraph {
     padding: 2rem;
+    margin-bottom: 2rem;
   }
 }
 
